# PyOpenJt

./: .gitignore  CMakeLists.txt  Package.bat  README.md  Setup.bat
Data/: .gitignore
Data/ExampleFiles/: SampleJT_Server.jt  Warehouse.jt  fishing_reel.jt
Data/ExampleFiles/fishing_reel/: bail_wire2.jt  body.jt  button.jt  drag_knob.jt  handle.jt  handle1_2.jt  handle_2.jt  part1.jt  part4.jt  part5.jt  rotor.jt  spool.jt
JTAssistant/: CMakeLists.txt
JTAssistant/src/JTData/: JTData_DataLoader.cxx  JTData_GeometrySource.cxx  JTData_Node.cxx  JTData_Node.hxx  JTData_SceneGraph.cxx  JTData_SceneGraph.hxx
JTAssistant/src/JTGui/: JTGui_MainWindow.cxx  JTGui_MainWindow.hxx  JTGui_Window.cxx  JTGui_Window.hxx  JsonModel.cxx  JsonModel.hxx  MainWindow.ui
JTAssistant/src/JTVis/: JTVis_Scene.cxx  JTVis_TargetedCamera.cxx
JtTools/: CMakeLists.txt
JtTools/src/: JtDump_Main.cpp
Python/: CMakeLists.txt  JtFileObject.cpp  PyOpenJt.cpp
TKJT/: CMakeLists.txt
TKJT/src/JtData/: JtData_InflateLzma.cxx  JtData_InflateLzma.hxx  JtData_Message.hxx  JtData_Model.cxx  JtData_Model.hxx  JtData_Object.hxx  JtData_Reader.cxx  JtData_Reader.hxx  JtData_Types.hxx
TKJT/src/JtDecode/: JtDecode_Int32CDP.cxx
TKJT/src/JtElement/: JtElement_ProxyMetaData.cxx  JtElement_ProxyMetaData.hxx
TKJT/src/JtNode/: JtNode_MetaData.cxx  JtNode_MetaData.hxx  JtNode_Part.cxx  JtNode_Part.hxx
TKJT/src/JtProperty/: JtProperty_LateLoaded.cxx  JtProperty_LateLoaded.hxx
ToolsLib/: CMakeLists.txt
ToolsLib/src/: JtData2Json.cpp  JtData2Json.h  JtGltfMesh.cpp  JtGltfMesh.h  JtLayer.cpp  JtLayer.h  JtUsdMesh.cpp  JtUsdMesh.h
